World Editor/ Modify character attributes info.

--- a/muddery/worlddata/editor/templates/characters.html
+++ b/muddery/worlddata/editor/templates/characters.html
@@ -9,6 +9,9 @@
     <h2><a href="./characters/character_careers/list.html">Character Careers</a></h2>
     Character's career decides their features, such as basic attribute values, basic skills, equipments etc.
 
+    <h2><a href="./characters/character_attributes_info/list.html">Character Attributes</a></h2>
+    Set what attributes characters can have.
+
     <h2><a href="./characters/character_models/list.html">Character Models</a></h2>
     Character's models, include HP, MP, and other attributes. With models, game designers can create
     batchs of similar characters easily.
