--- a/muddery/worlddata/editor/templates/characters.html
+++ b/muddery/worlddata/editor/templates/characters.html
@@ -9,7 +9,7 @@
     <h2><a href="./characters/character_careers/list.html">Character Careers</a></h2>
     Character's career decides their features, such as basic attribute values, basic skills, equipments etc.
 
-    <h2><a href="./characters/character_attributes_info/list.html">Character Attributes</a></h2>
+    <h2><a href="./characters/character_attributes_info/list.html">Character Attributes Information</a></h2>
     Set what attributes characters can have.
 
     <h2><a href="./characters/character_models/list.html">Character Models</a></h2>
