--- a/templates/example_cn/worlddata/editor/templates/characters.html
+++ b/templates/example_cn/worlddata/editor/templates/characters.html
@@ -8,7 +8,7 @@
     <h2><a href="./characters/character_careers/list.html">角色职业</a></h2>
     角色的职业决定了角色的基本特性，包括属性、技能、装备等方面的特点。
 
-    <h2><a href="./characters/character_attributes_info/list.html">角色属性</a></h2>
+    <h2><a href="./characters/character_attributes_info/list.html">角色属性信息</a></h2>
     设置角色可以有哪些属性。
 
     <h2><a href="./characters/character_models/list.html">角色模版</a></h2>
