World Data/ Modify the view of character attributes.

--- a/muddery/web/webclient/webclient/views/information.html
+++ b/muddery/web/webclient/webclient/views/information.html
@@ -24,11 +24,11 @@
                                         <img id="obj_icon" src="" />
                                         <span id="name"></span>
                                     </div>
-                                    <div><span id="view_level">LEVEL: </span><span id="level"></span></div>
-                                    <div><span id="view_exp">EXP: </span><span id="exp"></span></div>
-                                    <div><span id="view_hp">HP: </span><span id="hp"></span></div>
-                                    <div><span id="view_attack">ATTACK: </span><span id="attack"></span></div>
-                                    <div><span id="view_defence">DEFENCE: </span><span id="defence"></span></div>
+                                    <div id="attributes">
+                                        <div class="template">
+                                            <span class="attr_name"></span>: <span class="attr_value"></span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </td>
