Modify connection commands.

--- a/muddery/web/webclient/webclient/views/register.html
+++ b/muddery/web/webclient/webclient/views/register.html
@@ -22,9 +22,6 @@
                     <td>
                         <input id="reg_name" type="text" placeholder="username" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
                     </td>
-                    <td>
-                        <input id="reg_nickname" type="text" placeholder="nickname" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
-                    </td>
                 </tr>
                 <tr>
                     <td id="view_password">Password</td>
@@ -34,7 +31,7 @@
                         <input id="reg_password" type="password" placeholder="password" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
                     </td>
                     <td>
-                        <input id="reg_password_again" type="password" placeholder="password again" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
+                        <input id="reg_password_verify" type="password" placeholder="password verify" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
                     </td>
                 </tr>
                 <tr>
