--- a/muddery/worlddata/editor/static/worldeditor/css/worldeditor.css
+++ b/muddery/worlddata/editor/static/worldeditor/css/worldeditor.css
@@ -22,3 +22,14 @@ hr {
 thead th {
     background: #e7e7e7;
 }
+
+.editor_nav {
+    margin: 10px 10px 20px 10px;
+    font-size: 18px;
+}
+
+.nav_button {
+    border-radius: 2px;
+    background-color: #cbdcef;
+    padding: 2px 6px;
+}
