Add descriptions on conditions. Fix bugs in statements and client's dialogues.

--- a/muddery/worlddata/editor/templates/objects.html
+++ b/muddery/worlddata/editor/templates/objects.html
@@ -29,5 +29,8 @@
 
     <h2><a href="./objects/default_objects/list.html">Default Objects</a></h2>
     Character's default objects. Characters are born with their default objects.
+    
+    <h2><a href="./objects/condition_desc/list.html">Condition Descriptions</a></h2>
+    Set object's descriptions on different conditions.
 
 {% endblock content %}
