--- a/muddery/worlddata/editor/templates/worldmap.html
+++ b/muddery/worlddata/editor/templates/worldmap.html
@@ -19,5 +19,8 @@
 
     <h2><a href="./worldmap/world_npcs/list.html">World NPCs</a></h2>
     These NPCs are unique in the whole game world. Their initial positions are fixed.
+    
+    <h2><a href="./worldmap/condition_desc/list.html">Condition Descriptions</a></h2>
+    Set object's descriptions on different conditions.
 
 {% endblock content %}
