--- a/templates/example_cn/worlddata/editor/templates/objects.html
+++ b/templates/example_cn/worlddata/editor/templates/objects.html
@@ -31,5 +31,8 @@
 
     <h2><a href="./objects/default_objects/list.html">默认物品</a></h2>
     角色的默认物品，角色一出生就带有这些默认物品。
+    
+    <h2><a href="./objects/condition_desc/list.html">条件描述</a></h2>
+    设置在不同条件下物体显示出的描述信息。
 
 {% endblock content %}
