--- a/templates/cn/worlddata/editor/templates/worldmap.html
+++ b/templates/cn/worlddata/editor/templates/worldmap.html
@@ -20,6 +20,9 @@
     <h2><a href="./worldmap/world_npcs/list.html">世界NPC</a></h2>
     世界NPC在整个世界中是独一无二的，他们的初始位置是固定不变的。
 
+    <h2><a href="./worldmap/condition_desc/list.html">条件描述</a></h2>
+    设置在不同条件下物体显示出的描述信息。
+
     <p>If you are an advanced user who needs access to the raw Django Admin, it is available <a href="{% url "django_admin" %}">here</a>.</p>
 
 {% endblock content %}
