Add honour combat.

--- a/muddery/worlddata/editor/templates/characters.html
+++ b/muddery/worlddata/editor/templates/characters.html
@@ -26,6 +26,9 @@
     <h2><a href="./characters/default_objects/list.html">Default Objects</a></h2>
     Character's default objects. Characters are born with their default objects.
 
+    <h2><a href="./characters/skill_types/list.html">Skill Types</a></h2>
+    Skill's types.
+    
     <h2><a href="./characters/skills/list.html">Skills</a></h2>
     All available skills are in this table.
 
