--- a/templates/battle_field/worlddata/editor/templates/characters.html
+++ b/templates/battle_field/worlddata/editor/templates/characters.html
@@ -23,6 +23,9 @@
     <h2><a href="./characters/default_objects/list.html">角色默认物品</a></h2>
     角色的默认物品，角色一出生就带有这些默认物品。
 
+    <h2><a href="./characters/skill_types/list.html">技能类型</a></h2>
+    技能的类型。
+    
     <h2><a href="./characters/skills/list.html">技能</a></h2>
     角色可用的所有技能都在这里。
 
