--- a/muddery/web/webclient/webclient/views/combat.html
+++ b/muddery/web/webclient/webclient/views/combat.html
@@ -13,7 +13,9 @@
         <script src="../controllers/combat.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
-        <div id="desc" class="modal-header">
+        <div class="modal-header">
+            <div id="center_time">Time: <span id="timeout"></span></div>
+            <div id="desc"></div>
         </div>
         <div id="characters" class="modal-body">
             <div class="template">
