--- a/muddery/web/webclient/webclient/views/honours.html
+++ b/muddery/web/webclient/webclient/views/honours.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="box_honours">
-            <button id="button_match" type="button" class="btn btn-default" onclick="controller.makeMatch()">Make Match</button>
+            <button id="button_fight" type="button" class="btn btn-default" onclick="controller.makeMatch()">FIGHT</button>
             <div><br></div>
         	<table id="tab_honours">
         		<thead>
