--- a/muddery/web/webclient/webclient/css/combat.css
+++ b/muddery/web/webclient/webclient/css/combat.css
@@ -8,6 +8,12 @@
     text-align: center;
 }
 
+#messages {
+    overflow-x: hidden;
+    overflow-y: auto;
+	height: 100px;
+}
+
 #characters {
 	min-height: 100px;
 }
