--- a/muddery/web/webclient/webclient/views/combat.html
+++ b/muddery/web/webclient/webclient/views/combat.html
@@ -26,6 +26,9 @@
                 <div class="name"></div>
             </div>
         </div>
+        <div id="messages">
+        	<div class="msg template"></div>
+        </div>
         <div id="buttons" class="modal-footer">
             <button class="btn_combat template" type="button" onclick="controller.doCombatSkill(this)">
                 <center>
