--- a/templates/legend/web/webclient_overrides/webclient/main.html
+++ b/templates/legend/web/webclient_overrides/webclient/main.html
@@ -122,6 +122,8 @@
                         <span class="prompt_element"><span id="view_level">LEVEL: </span><span id="prompt_level"></span></span>
                         <span class="prompt_element"><span id="view_exp">EXP: </span><span id="prompt_exp"></span></span>
                         <span class="prompt_element"><span id="view_hp">HP: </span><span id="prompt_hp"></span></span>
+                        <span class="prompt_element"><span id="prompt_queue"></span></span>
+                        <span class="prompt_element"><span id="prompt_ave_waiting"></span></span>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -139,6 +141,7 @@
                         <iframe id="frame_inventory" class="content_frame" src="./views/inventory.html"></iframe>
                         <iframe id="frame_skills" class="content_frame" src="./views/skills.html"></iframe>
                         <iframe id="frame_quests" class="content_frame" src="./views/quests.html"></iframe>
+                        <iframe id="frame_honours" class="content_frame" src="./views/honours.html"></iframe>
                     </div>
                 </div>
                 <div id="tab_bar">
@@ -158,8 +161,21 @@
                         <li id="tab_inventory" role="presentation" class="">
                             <a id="view_inventory" onclick="controller.showContent('inventory')">Map</a>
                         </li>
+                        <li id="tab_honours" role="presentation" class="">
+                            <a id="view_honours" onclick="controller.showHonours()">Honours</a>
+                        </li>
                         <li id="tab_system" role="presentation" class="">
                             <a id="view_logout" onclick="commands.doLogout()">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="input_bar">
+                    <button id="msg_select" onclick="controller.showMsgTypes()" class="btn btn-default"></button>
+                    <input id="msg_input" type="text" aria-describedby="basic-addon2" autocomplete="off" class="form-control" />
+                    <button id="msg_send" onclick="controller.sendMessage()" class="btn btn-default">Send</button>
+                    <ul id="msg_type_menu" class="dropdown-menu">
+                        <li class="template">
+                            <a onclick="controller.selectMsgType(this)" class="dropdown-item"></a>
                         </li>
                     </ul>
                 </div>
