Modify the honour combat.

--- a/muddery/web/webclient/webclient/css/webclient.css
+++ b/muddery/web/webclient/webclient/css/webclient.css
@@ -36,7 +36,11 @@ body {
 	display: none;
 }
 
-#popup_modal {
+#popup_confirm_combat {
+	display: none;
+}
+
+.popup_modal {
  	display: block;
 }
 
