--- a/templates/legend/web/webclient_overrides/webclient/main.html
+++ b/templates/legend/web/webclient_overrides/webclient/main.html
@@ -45,6 +45,15 @@
     </head>
     <body>
         <!-- Show popup windows in this div. -->
+		<div id="popup_confirm_combat" class="container">
+            <div role="dialog" class="modal in popup_modal">
+                <div class="modal-dialog modal-sm vertical-center">
+                    <div class="modal-content">
+                    	<iframe id="frame_confirm_combat" class="modal-content popup_frame" src="./views/confirm_combat.html"></iframe>
+        			</div>
+        		</div>
+        	</div>
+        </div>
         <div id="popup_container" class="container">
             <div id="popup_modal" role="dialog" class="modal in">
                 <div class="modal-dialog modal-sm vertical-center">
