--- a/templates/legend/web/webclient_overrides/webclient/views/confirm_combat.html
+++ b/templates/legend/web/webclient_overrides/webclient/views/confirm_combat.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="modal-header">
-            <button type="button" onclick="controller.doClosePopupBox()" class="close">×</button>
+            <button type="button" onclick="controller.doClose()" class="close">×</button>
             <h4 id="popup_header" class="modal-title"></h4>
         </div>
         <div class="modal-body">
