Modify the honour combat.

--- a/templates/legend/web/webclient_overrides/webclient/views/confirm_combat.html
+++ b/templates/legend/web/webclient_overrides/webclient/views/confirm_combat.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="modal-header">
-            <button type="button" onclick="controller.doClose()" class="close">×</button>
+            <button id="button_close" type="button" class="close">×</button>
             <h4 id="popup_header" class="modal-title"></h4>
         </div>
         <div class="modal-body">
@@ -22,7 +22,7 @@
             <p id="time"></p>
         </div>
         <div id="popup_footer" class="modal-footer">
-            <button type="button" class="btn btn-default" onclick="controller.confirmCombat()">Confirm</button>
+            <button id="button_confirm" type="button" class="btn btn-default">Confirm</button>
         </div>
     </body>
 </html>
