--- a/templates/legend/web/webclient_overrides/webclient/views/honours.html
+++ b/templates/legend/web/webclient_overrides/webclient/views/honours.html
@@ -14,8 +14,8 @@
     </head>
     <body>
         <div id="box_honours">
-            <button id="button_queue" type="button" class="btn btn-default" onclick="controller.queueUpCombat()">QUEUE UP</button>
-            <button id="button_quit" type="button" class="btn btn-default" onclick="controller.quitCombatQueue()" style="display: none;">QUIT QUEUE</button>
+            <button id="button_queue" type="button" class="btn btn-default">QUEUE UP</button>
+            <button id="button_quit" type="button" class="btn btn-default" style="display: none;">QUIT QUEUE</button>
             <div><br></div>
         	<table id="tab_honours">
         		<thead>
