--- a/muddery/web/webclient/webclient/views/honours.html
+++ b/muddery/web/webclient/webclient/views/honours.html
@@ -14,7 +14,8 @@
     </head>
     <body>
         <div id="box_honours">
-            <button id="button_fight" type="button" class="btn btn-default" onclick="controller.makeMatch()">FIGHT</button>
+            <button id="button_queue" type="button" class="btn btn-default">QUEUE UP</button>
+            <button id="button_quit" type="button" class="btn btn-default" style="display: none;">QUIT QUEUE</button>
             <div><br></div>
         	<table id="tab_honours">
         		<thead>
