--- a/muddery/web/webclient/webclient/views/skills.html
+++ b/muddery/web/webclient/webclient/views/skills.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/skills.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/skills.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
 		<div id="box_skills">
@@ -27,12 +24,15 @@
 							<div class="skill_icon">
 								<img class="img_icon" src="" />
 							</div>
-							<a class="skill_name" href="#" onclick="controller.doLook(this)"></a>
+							<a class="skill_name"></a>
 						</td>
 						<td class="skill_desc"></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
