--- a/muddery/web/webclient/webclient/views/shop.html
+++ b/muddery/web/webclient/webclient/views/shop.html
@@ -8,13 +8,10 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/shop.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/shop.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div class="modal-header">
-            <button type="button" onclick="controller.doClosePopupBox()" class="close">×</button>
+            <button type="button" id="close_box" class="close">×</button>
             <h4 id="shop_name" class="modal-title"></h4>
         </div>
         <div class="modal-body">
@@ -26,9 +23,9 @@
         		<table class="tab_shop">
         			<thead>
         				<tr>
-        					<th id="header_name">名称</th>
-        					<th id="header_price">价格</th>
-        					<th id="header_desc">描述</th>
+        					<th id="header_name">NAME</th>
+        					<th id="header_price">PRICE</th>
+        					<th id="header_desc">DESC</th>
         				</tr>
         			</thead>
 					<tbody id="goods_list">
@@ -37,7 +34,7 @@
 								<center class="goods_icon">
 									<img class="img_icon" src="" />
 								</center>
-								<a class="div_name" href="#" onclick="controller.showGoods(this)">
+								<a class="div_name">
 									<span class="goods_name"></span>
 									<span class="number_mark">×</span>
 									<span class="goods_number"></span>
@@ -55,5 +52,9 @@
         </div>
         <div id="popup_footer" class="modal-footer">
         </div>
+
+        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
