--- a/muddery/web/webclient/webclient/views/select_char.html
+++ b/muddery/web/webclient/webclient/views/select_char.html
@@ -13,7 +13,7 @@
         <div id="box_character">
             <div id="view_character">Characters</div>
             <div id="character_items">
-                <div class="template">
+                <div class="character_item template">
         			<a class="char_name"></a>
         			<button type="button" class="button_delete">×</button>
         		</div>
