--- a/muddery/web/webclient/webclient/css/select_char.css
+++ b/muddery/web/webclient/webclient/css/select_char.css
@@ -3,8 +3,12 @@
     padding: 2px 2px 10px 2px;
 }
 
+.character_item {
+    line-height: 25px;
+}
+
 .char_name {
-    padding: 10px 20px 10px 2px;
+    padding: 5px 20px 5px 2px;
 }
 
 .button_delete {
