--- a/muddery/web/webclient/webclient/views/honours.html
+++ b/muddery/web/webclient/webclient/views/honours.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/honours.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/honours.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div id="box_honours">
@@ -34,5 +31,9 @@
         		</tbody>
         	</table>
         </div>
+
+		<script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
