--- a/muddery/web/webclient/webclient/views/inventory.html
+++ b/muddery/web/webclient/webclient/views/inventory.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/inventory.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/inventory.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div id="box_inventory">
@@ -28,7 +25,7 @@
         					<div class="obj_icon">
         						<img class="img_icon" src="" />
         					</div>
-        					<a class="obj_name" href="#" onclick="controller.doLook(this)"></a>
+        					<a class="obj_name"></a>
         				</td>
         				<td class="obj_number"></td>
         				<td class="obj_desc"></td>
@@ -36,5 +33,9 @@
         		</tbody>
         	</table>
         </div>
+
+        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
