--- a/muddery/web/webclient/webclient/views/object.html
+++ b/muddery/web/webclient/webclient/views/object.html
@@ -8,13 +8,10 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/object.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/object.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div class="modal-header">
-            <button type="button" onclick="controller.doClosePopupBox()" class="close">×</button>
+            <button type="button" id="close_box" class="close">×</button>
             <h4 id="popup_header" class="modal-title"></h4>
         </div>
         <div class="modal-body">
@@ -24,7 +21,11 @@
             <p id="popup_body"></p>
         </div>
         <div id="popup_footer" class="modal-footer">
-            <button type="button" class="btn btn-default template" onclick="controller.doCommandLink(this)"></button>
+            <button type="button" class="btn btn-default template"></button>
         </div>
+
+        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
