--- a/muddery/web/webclient/webclient/views/dialogue.html
+++ b/muddery/web/webclient/webclient/views/dialogue.html
@@ -8,30 +8,31 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/dialogue.css" />
-
-        <script src="../libs/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/dialogue.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div class="modal-header">
-            <button id="close_box" type="button" onclick="controller.doClosePopupBox()" class="close">×</button>
+            <button id="close_box" type="button" class="close">×</button>
             <h4 id="header" class="modal-title"></h4>
         </div>
         <div class="modal-body">
             <div id="div_icon">
                 <img id="img_icon" src="" />
             </div>
-            <div id="body">
-                <div id="content"></div>
+            <div id="dialogue_body">
+                <div id="dialogue_content"></div>
                 <p class="template" >
-                    <a href="#" onclick="controller.doDialogue(this)"></a>
+                    <a></a>
                 </p>
             </div>
         </div>
         <div id="footer" class="modal-footer">
             <center>
-                <button id="button" type="button" class="btn btn-default" onclick="controller.doClosePopupBox()"></button>
+                <button id="bottom_button" type="button" class="btn btn-default"></button>
             </center>
         </div>
+        
+        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
