Modify the webclient's framework.

--- a/muddery/web/webclient/webclient/views/shop.html
+++ b/muddery/web/webclient/webclient/views/shop.html
@@ -54,7 +54,7 @@
         </div>
 
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/scripts.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
