--- a/muddery/web/website/templates/base.html
+++ b/muddery/web/website/templates/base.html
@@ -68,7 +68,7 @@
         <a href="http://cn.muddery.org/">About Us</a> |
         <a href="{% url 'admin:index' %}">Administer</a> |
         <a href="{% url 'worlddata:index' %}">Edit Game</a> |
-        <a href="/webclient/main.html">Play Online</a>
+        <a href="/webclient/index.html">Play Online</a>
       </div>
     </div>
 
