--- a/muddery/web/website/templates/index.html
+++ b/muddery/web/website/templates/index.html
@@ -18,7 +18,7 @@
       database without logging into the game.
         {% if webclient_enabled %}
         You can also connect to the game directly from your browser using our
-        <a href="/webclient/main.html">online client</a>!<br><br>
+        <a href="/webclient/index.html">online client</a>!<br><br>
         {% endif %}
       For more info, take your time to
       peruse our extensive online <a href="https://github.com/muddery/muddery/wiki">documentation</a>.
