Add MP to the template example_cn.

--- a/muddery/web/webclient/webclient/views/main.html
+++ b/muddery/web/webclient/webclient/views/main.html
@@ -124,12 +124,8 @@
         <div id="wrapper">
             <div id="middlewindow">
                 <div id="prompt_bar">
-                    <div id="prompt_content" style="display: none">
-                        <span class="prompt_element"><span id="prompt_name"></span></span>
-                        <span class="prompt_element"><span id="view_level">LEVEL: </span><span id="prompt_level"></span></span>
-                        <span class="prompt_element"><span id="view_exp">EXP: </span><span id="prompt_exp"></span></span>
-                        <span class="prompt_element"><span id="view_hp">HP: </span><span id="prompt_hp"></span></span>
-                        <span class="prompt_element"><span id="prompt_queue"></span></span>
+                    <div id="prompt_content">
+                        <span class="prompt_element template"></span>
                     </div>
                 </div>
                 <div class="panel panel-default">
