Modify the webclient and skills.

--- a/templates/cn/web/template_overrides/index.html
+++ b/templates/cn/web/template_overrides/index.html
@@ -11,7 +11,7 @@
    <!--div class="twoThirds noBorderOnLeft"-->
    <div class="noBorderOnLeft">
       <h1>欢迎</h1>
-      <p>欢迎来到游戏的主页，你可以通过<a href="/webclient/main.html">网页客户端</a>直接开始游戏。<br></br>
+      <p>欢迎来到游戏的主页，你可以通过<a href="/webclient/index.html">网页客户端</a>直接开始游戏。<br></br>
       这个游戏是通过Muddery构建的，Muddery是一个用Python编写的在线文字游戏框架，所有的代码都是开源的，可以帮你快速构建起游戏框架。如果你想了解更多信息，欢迎访问我们的主页<a href="http://cn.muddery.org">cn.muddery.org</a>。
    </div>
 </div>
