--- a/templates/cn/web/template_overrides/base.html
+++ b/templates/cn/web/template_overrides/base.html
@@ -68,7 +68,7 @@
         <a href="http://cn.muddery.org/">关于我们</a> |
         <a href="{% url 'admin:index' %}">管理页面</a> |
         <a href="{% url 'worlddata:index' %}">编辑游戏</a> |
-        <a href="/webclient/main.html">开始游戏</a>
+        <a href="/webclient/index.html">开始游戏</a>
       </div>
     </div>
 
