--- a/muddery/web/webclient/webclient/views/combat.html
+++ b/muddery/web/webclient/webclient/views/combat.html
@@ -13,6 +13,7 @@
         <div class="modal-header">
             <div id="center_time">Time: <span id="timeout"></span></div>
             <div id="desc"></div>
+            <div id="status_bar"><span id="name"></span> <span id="status"></span></div>
         </div>
         <div id="characters" class="modal-body">
             <div class="template">
